--- a/NodeListForm/LogicLib/LogicLib.csproj
+++ b/NodeListForm/LogicLib/LogicLib.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Loging.cs" />
     <Compile Include="NodeManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="EnumTypesOfLog.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
