--- a/NodeListForm/NodeApp/NodeApp.csproj
+++ b/NodeListForm/NodeApp/NodeApp.csproj
@@ -85,5 +85,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LogicLib\LogicLib.csproj">
+      <Project>{35ebdb8d-0837-4985-98b6-b0221aa5830f}</Project>
+      <Name>LogicLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
